// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccessTokenList should display the "Generate Token" card  above the table if the token is expired 1`] = `
<div
  class="flex-grow-1 mx-4 table-root mb-0"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-striped table-list table-nowrap table-head-bordered table-hover"
    >
      <thead>
        <tr>
          <th
            class="table-head-title"
          >
            Token
          </th>
          <th
            class="table-head-title"
          >
            Date Created
          </th>
          <th
            class="table-head-title"
          >
            Expiration
          </th>
          <th />
        </tr>
      </thead>
      <tbody
        class="mb-0"
      >
        <tr
          class=""
        >
          <td
            class=""
            data-testid="row-token-4ABC"
          >
            <span
              class="text-secondary mr-1"
            >
              Token ending in
            </span>
            <strong
              class="font-weight-bold"
            >
              4ABC
            </strong>
            <div
              class="label label-root ml-2 label-danger label-lg label-uppercase"
            >
              <span
                class="label-item"
              >
                Expired
              </span>
            </div>
          </td>
          <td>
            Jul 10, 2018
          </td>
          <td>
            Jul 09, 2018
          </td>
          <td
            class="row-inline-actions"
          >
            <span />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AccessTokenList should render 1`] = `
<div>
  <div
    class="settings-root"
  >
    <nav
      class="bg-white mb-4 tbar component-tbar"
    >
      <ul
        class="mx-4 tbar-nav"
      >
        <li
          class="tbar-item"
        >
          <div
            class="component-action"
          >
            <a
              aria-label="Back"
              class="text-secondary"
              href="/workspace/23"
            >
              <svg
                class="lexicon-icon lexicon-icon-angle-left mb-1"
                role="presentation"
              >
                <use
                  href="#angle-left"
                />
              </svg>
            </a>
          </div>
        </li>
        <li
          class="pl-0 tbar-item"
        >
          <div
            class="tbar-section"
          >
            <span
              class="text-dark"
            >
              <span
                class="text-5 font-weight-bold"
              >
                Settings
              </span>
            </span>
          </div>
        </li>
      </ul>
    </nav>
    <div
      class="content-wrapper"
    >
      <nav
        class="section-side settings-side-bar"
      >
        <div>
          <h5
            class="section-title"
          >
            Workspace Data
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/apis/tokens"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_api icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_api"
                    />
                  </svg>
                </span>
                APIs
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/definitions"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-definitions icon-root"
                    role="presentation"
                  >
                    <use
                      href="#definitions"
                    />
                  </svg>
                </span>
                Definitions
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-privacy"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-data_privacy_lock icon-root"
                    role="presentation"
                  >
                    <use
                      href="#data_privacy_lock"
                    />
                  </svg>
                </span>
                Data Control & Privacy
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/data-source"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-faro_data_source icon-root"
                    role="presentation"
                  >
                    <use
                      href="#faro_data_source"
                    />
                  </svg>
                </span>
                Data Sources
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/recommendations"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_star icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_star"
                    />
                  </svg>
                </span>
                Recommendations
              </a>
            </li>
          </ul>
        </div>
        <div>
          <h5
            class="section-title"
          >
            Workspace Settings
          </h5>
          <ul
            class="nav"
          >
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/users"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-user_management icon-root"
                    role="presentation"
                  >
                    <use
                      href="#user_management"
                    />
                  </svg>
                </span>
                User Management
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/properties"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ac_page icon-root"
                    role="presentation"
                  >
                    <use
                      href="#ac_page"
                    />
                  </svg>
                </span>
                Properties
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/usage"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-usage icon-root"
                    role="presentation"
                  >
                    <use
                      href="#usage"
                    />
                  </svg>
                </span>
                Subscription & Usage
              </a>
            </li>
            <li
              class="item"
            >
              <a
                class="button-root"
                href="/workspace/23/settings/workspace"
              >
                <span
                  class="icon-wrapper"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-cog icon-root"
                    role="presentation"
                  >
                    <use
                      href="#cog"
                    />
                  </svg>
                </span>
                Workspace
              </a>
            </li>
          </ul>
        </div>
      </nav>
      <div
        class="content section-main"
      >
        <div
          class="settings-base-page-root access-token-list-root"
        >
          <div
            class="maintenance-alert-root"
          />
          <div
            class="content-header"
          >
            <div
              class="header-text"
            >
              <div
                class="d-flex"
              >
                <h3
                  class="title-text text-truncate"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Access Tokens
                  </span>
                </h3>
              </div>
              <div
                class="description"
              >
                Access this workspace's data via API using an access token. A full list of endpoints is available in the 
                <a
                  class=""
                  href="https://learn.liferay.com/w/dxp/personalization/analytics-cloud/workspace-data/managing-api-access"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  documentation
                  <span
                    class="sr-only"
                  >
                    (Opens a new window)
                  </span>
                </a>
                .
              </div>
            </div>
            <div
              class="page-actions-container"
            />
          </div>
          <div>
            <div
              class="col-xl-8 pl-0"
            >
              <div
                class="card card-root"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="align-items-start d-flex flex-column justify-content-between"
                  >
                    <div
                      class="h4 mb-4"
                    >
                      Token Information
                    </div>
                    <div
                      class="h5"
                    >
                      Root Endpoint:
                    </div>
                    <span
                      class="text-secondary"
                    >
                      http://liferay.com/api/reports
                    </span>
                  </div>
                </div>
                <div
                  class="flex-grow-1 mx-4 table-root mb-0"
                >
                  <div
                    class="table-responsive"
                  >
                    <table
                      class="table table-autofit table-striped table-list table-nowrap table-head-bordered table-hover"
                    >
                      <thead>
                        <tr>
                          <th
                            class="table-head-title"
                          >
                            Token
                          </th>
                          <th
                            class="table-head-title"
                          >
                            Date Created
                          </th>
                          <th
                            class="table-head-title"
                          >
                            Expiration
                          </th>
                          <th />
                        </tr>
                      </thead>
                      <tbody
                        class="mb-0"
                      >
                        <tr
                          class=""
                        >
                          <td
                            class=""
                            data-testid="row-token-4ABC"
                          >
                            <span
                              class="text-secondary mr-1"
                            >
                              Token ending in
                            </span>
                            <strong
                              class="font-weight-bold"
                            >
                              4ABC
                            </strong>
                          </td>
                          <td>
                            Jul 10, 2018
                          </td>
                          <td>
                            Aug 09, 2018
                          </td>
                          <td
                            class="row-inline-actions"
                          >
                            <span>
                              <button
                                aria-label="Click to Copy"
                                class="button-root btn btn-secondary"
                                data-clipboard-text="1234ABC"
                                title="Click to Copy"
                                type="button"
                              >
                                <svg
                                  class="lexicon-icon lexicon-icon-copy icon-root"
                                  role="presentation"
                                >
                                  <use
                                    href="#copy"
                                  />
                                </svg>
                              </button>
                              <button
                                class="button-root btn btn-secondary"
                                type="button"
                              >
                                Revoke
                              </button>
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccessTokenList should render indefinite on expiration date column when generated token is indefinite 1`] = `
<td>
  Indefinite
</td>
`;

exports[`AccessTokenList should render the correct date on expiration date column when generated token is 1 year 1`] = `
<td>
  May 12, 2024
</td>
`;

exports[`AccessTokenList should render the correct date on expiration date column when generated token is 6 months 1`] = `
<td>
  Nov 12, 2023
</td>
`;

exports[`AccessTokenList should render the correct date on expiration date column when generated token is 30 days 1`] = `
<td>
  Jun 12, 2023
</td>
`;

exports[`AccessTokenList should show the generated token in a list and the "Generate Token" button should no longer be visible 1`] = `
<div
  class="flex-grow-1 mx-4 table-root mb-0"
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-autofit table-striped table-list table-nowrap table-head-bordered table-hover"
    >
      <thead>
        <tr>
          <th
            class="table-head-title"
          >
            Token
          </th>
          <th
            class="table-head-title"
          >
            Date Created
          </th>
          <th
            class="table-head-title"
          >
            Expiration
          </th>
          <th />
        </tr>
      </thead>
      <tbody
        class="mb-0"
      >
        <tr
          class=""
        >
          <td
            class=""
            data-testid="row-token-4ABC"
          >
            <span
              class="text-secondary mr-1"
            >
              Token ending in
            </span>
            <strong
              class="font-weight-bold"
            >
              4ABC
            </strong>
          </td>
          <td>
            Jul 10, 2018
          </td>
          <td>
            Aug 09, 2018
          </td>
          <td
            class="row-inline-actions"
          >
            <span>
              <button
                aria-label="Click to Copy"
                class="button-root btn btn-secondary"
                data-clipboard-text="1234ABC"
                title="Click to Copy"
                type="button"
              >
                <svg
                  class="lexicon-icon lexicon-icon-copy icon-root"
                  role="presentation"
                >
                  <use
                    href="#copy"
                  />
                </svg>
              </button>
              <button
                class="button-root btn btn-secondary"
                type="button"
              >
                Revoke
              </button>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
